# bread_dog_blacklist_system

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirement.txt  requirements.txt
bread_dog_blacklist_system/: asgi.py  settings.py  urls.py  wsgi.py
static/system/css/: login.css  panel.css  user.css
static/system/js/: add-ban.js  login.js  my-bans.js  user.js
system/: admin.py  lib.py  models.py  util.py  views.py
system/migrations/: 0001_initial.py  0002_alter_user_key.py
templates/system/: add-ban.html  all-bans.html  copyright.html  login.html  my-bans.html  panel.html  user.html
