[tool.poetry]
name = "bread-dog-blacklist-system"
version = "0.1.0"
description = ""
authors = ["Qianyiovo <1291525582@qq.com>"]
readme = "README.md"
packages = [{include = "bread_dog_blacklist_system"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
requests = "^2.28.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
